# tns_brn

./: .gitignore  Cargo.toml  README.md
examples/basic_image_classification/: Cargo.toml  data.rs  inference.rs  main.rs  main_.rs  mnist_fashion.rs  model.rs  plot.rs  training.rs
src/: main.rs
